# QLeaf

./: .gitignore  BENCHMARK.md  CMakeLists.txt  LATENCY_BENCHMARK.md  LICENSE.md  README.md
bench/: compare_config_pair.py  compare_latency.py  external_latency.py  external_latency_cpp.cc  perf_layout.sh  plot_single_poller.py  qleaf_latency.cc  qleaf_latency_common.h  qleaf_latency_gpu.cu  qleaf_latency_gpu_ablation.cu  qleaf_latency_gpu_bitmask_cache.cu  qleaf_latency_gpu_bitmask_tpt.cu  qleaf_latency_gpu_common.cuh  qleaf_latency_gpu_mp_sentinel.cu  qleaf_latency_gpu_naive.cu  qleaf_latency_gpu_oneshot.cu  qleaf_latency_gpu_sp.cu  qleaf_latency_gpu_sp_map.cu  qleaf_latency_gpu_stub.cc  sweep_latency.sh  sweep_single_poller.sh  worker.cc
bench/data/: higgs_d6_n1000.feats.csv  higgs_d6_n1000.qleaf.json  higgs_d6_n2000.qleaf.json  higgs_d6_n500.qleaf.json  higgs_d6_n500.xgb.json
bench/results/: higgs_d6_n5000_worker_bench.json  higgs_d6_n5000_worker_bench_release.json  higgs_d6_n5000_worker_bench_release_gpu.json  higgs_d6_n500_worker_bench.json  higgs_d6_n500_worker_bench_release.json  higgs_d6_n500_worker_bench_release_gpu.json  higgs_worker_bench_summary.csv  higgs_worker_bench_summary_all_builds.csv  higgs_worker_bench_summary_release.csv  higgs_worker_bench_summary_release_gpu.csv
bench/results/latency/fil_optimize_b1/: compare.txt
bench/results/latency/gpu_regression_consolidated_20260611/: compare.txt
bench/results/latency/higgs_n2000_bt32_grid28_cacheall/: qleaf_gpu_persistent_compact_bt_32_transposed_0_bitmask_0_cached_1_mapped_1_cacheallwaves_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_32_transposed_0_bitmask_0_cached_1_mapped_1_cacheallwaves_1_crossreduce_0_sp_1_stage_1_seqflag_0.percentiles.csv  qleaf_gpu_persistent_compact_bt_32_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_32_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.percentiles.csv  summary.csv  summary.json
bench/results/latency/higgs_n2000_bt32_grid28_cacheall_decomp_prof/: qleaf_gpu_persistent_compact_bt_32_transposed_0_bitmask_0_cached_1_mapped_1_cacheallwaves_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_32_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_32_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.input_load_ns.hdr  qleaf_gpu_persistent_compact_bt_32_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.percentiles.csv  qleaf_gpu_persistent_compact_bt_32_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.predict_ns.hdr  summary.csv  summary.json
bench/results/latency/higgs_n2000_bt32_grid28_cacheall_pinned/: qleaf_gpu_persistent_compact_bt_32_transposed_0_bitmask_0_cached_1_mapped_1_cacheallwaves_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_32_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_32_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.percentiles.csv  summary.csv  summary.json
bench/results/latency/higgs_n2000_bt96_cached_decomp_prof/: qleaf_gpu_persistent_compact_bt_96_transposed_0_bitmask_0_cached_1_mapped_1_cacheallwaves_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.input_load_ns.hdr  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.input_load_ns.percentiles.csv  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.percentiles.csv  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.predict_ns.hdr  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_0_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.predict_ns.percentiles.csv  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_1_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.hdr  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_1_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.input_load_ns.hdr  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_1_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.input_load_ns.percentiles.csv  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_1_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.percentiles.csv  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_1_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.predict_ns.hdr  qleaf_gpu_persistent_compact_bt_96_transposed_1_bitmask_0_cached_1_mapped_1_crossreduce_0_sp_1_stage_1_seqflag_0.predict_ns.percentiles.csv  summary.csv  summary.json
bench/results/sweep/: bt1024_n1000.json  bt1024_n2000.json  bt1024_n3000.json  bt1024_n4000.json  bt1024_n500.json  bt1024_n5000.json  bt512_n1000.json  bt512_n2000.json  bt512_n3000.json  bt512_n4000.json  bt512_n500.json  bt512_n5000.json  cachedbt32_n1000.json  cachedbt32_n2000.json  cachedbt32_n3000.json  cachedbt32_n4000.json  cachedbt32_n500.json  cachedbt32_n5000.json  cachedbt64_n1000.json  cachedbt64_n2000.json  cachedbt64_n3000.json  cachedbt64_n4000.json  cachedbt64_n500.json  cachedbt64_n5000.json  cpu_epsilon_n5000.json  cpu_epsilon_pinned.json  cpu_epsilon_unpin.json  cpu_higgs_n5000.json  cpu_higgs_pinned.json  cpu_higgs_unpin.json  cpuavx_epsilon_n1000.json  cpuavx_epsilon_n2000.json  cpuavx_epsilon_n500.json  cpuavx_epsilon_n5000.json  cpuavx_higgs_n1000.json  cpuavx_higgs_n2000.json  cpuavx_higgs_n500.json  cpuavx_higgs_n5000.json  cuda_n1000.json  cuda_n2000.json  (+47 more)
include/: config.h  gworkers.cuh  qleaf.h
py/: train.py
test/: compact_forest.cc  forest.cc  load_balancer.cc
(+7863 files in other folders)
